[tool.poetry]
name = "pythongraphrunner"
version = "0.1.0"
description = ""
authors = ["Adithya Yerramsetty <adithyay@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
